Edit: password confirguracion validations

--- a/RepositoryEmail/Templates/VerifyCount.html
+++ b/RepositoryEmail/Templates/VerifyCount.html
@@ -503,10 +503,10 @@
                                                                     style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px">
                                                                     <span class="es-button-border"
                                                                         style="border-style:solid;border-color:#2CB543;background:#f1c232;border-width:0px;display:inline-block;border-radius:6px;width:auto"><a
-                                                                            href="{ConfirmUrl}"
+                                                                            
                                                                             class="es-button" target="_blank"
                                                                             style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:20px;padding:10px 30px 10px 30px;display:inline-block;background:#f1c232;border-radius:6px;font-family:arial, 'helvetica neue', helvetica, sans-serif;font-weight:normal;font-style:normal;line-height:24px;width:auto;text-align:center;mso-padding-alt:0;mso-border-alt:10px solid #f1c232;padding-left:30px;padding-right:30px">CONFIRM
-                                                                            YOUR EMAIL</a></span></td>
+                                                                            {ConfirmUrl}</a></span></td>
                                                             </tr>
                                                             <tr>
                                                                 <td align="center" class="es-m-p0r es-m-p0l"
